--- a/todo.txt
+++ b/todo.txt
@@ -7,7 +7,12 @@
 GP18	  S4	*enabled   pci:0000:00:08.1
 GPP0	  S4	*enabled   pci:0000:00:01.1
 GPP8      S4	*enabled   pci:0000:00:03.1
-=> anscheinend das letzte?
+=> anscheinend das letzte? nö
+
+Das ist es...
+ sudo sh -c 'echo GPP0 > /proc/acpi/wakeup'
+
+
 
 [ ] unnötiges entfernen: evolution, yelp?? games
 [ ] Docker Verzeichnis
